// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`personReducer should handle GET_PERSON 1`] = `
Object {
  "book": Object {
    "allCategories": Array [],
    "book": Array [],
    "books": Array [],
  },
  "errors": Object {},
  "person": Object {
    "person": undefined,
  },
  "requests": Object {
    "userRequests": Array [],
  },
  "review": Object {
    "bookReviews": Array [],
  },
  "security": Object {
    "user": Object {},
    "validToken": false,
  },
}
`;

exports[`personReducer should handle GET_PERSONS 1`] = `
Object {
  "book": Object {
    "allCategories": Array [],
    "book": Array [],
    "books": Array [],
  },
  "errors": Object {},
  "person": Object {
    "persons": undefined,
  },
  "requests": Object {
    "userRequests": Array [],
  },
  "review": Object {
    "bookReviews": Array [],
  },
  "security": Object {
    "user": Object {},
    "validToken": false,
  },
}
`;

exports[`personReducer should return the initial state 1`] = `
Object {
  "book": Object {
    "allCategories": Array [],
    "book": Array [],
    "books": Array [],
  },
  "errors": Object {},
  "person": Object {
    "person": Object {},
    "persons": Array [],
  },
  "requests": Object {
    "userRequests": Array [],
  },
  "review": Object {
    "bookReviews": Array [],
  },
  "security": Object {
    "user": Object {},
    "validToken": false,
  },
}
`;
